--- a/main.html
+++ b/main.html
@@ -106,7 +106,8 @@
         </fieldset>
         <br>
         <p style="text-align:center">
-            <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem; margin-top: 1rem;">
+            <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem; margin-top: 1rem;"><br><br>
+            <a href="/" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a><br><br>
         </p>
     </form>
     <br><br>
