--- a/pit.html
+++ b/pit.html
@@ -77,7 +77,7 @@
 
                 <p style="text-align:center">
                     <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
-                    <a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a><br><br>
+                    <a href="/" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a><br><br>
                 </p>
             </form>
             <br><br>
