redirect to submitted page

--- a/submitted.html
+++ b/submitted.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <meta http-equiv="refresh" content="2;index.html" />
+    <meta http-equiv="refresh" content="2;/" />
     <title>Form Submitted!</title>
 </head>
     <body>
