--- a/submitted.html
+++ b/submitted.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="src/2023_float.css" type="text/css">
     <meta http-equiv="refresh" content="2;/" />
     <title>Form Submitted!</title>
 </head>
