update stylesheet paths

--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,25 @@
 <title>RAPID REACT Scouting</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="src/2023_float.css" type="text/css">
+<link rel="stylesheet" href="2023_float.css" type="text/css">
 <style>
-a {
-    border: #515151;
-    border-width: 1%;
-    border-style: solid;
-    border-radius: 5rem;
-    padding-right: 10%;
-    padding-left: 10%;
-    background-color: #515151;
-    color: white;
+a,a:visited {
     text-align: center;
     text-decoration: none;
     font-size: 6vh;
+    border-top: rgba(35,35,35,0);
+    border-left: rgba(35,35,35,0);
+    border-right: rgba(35,35,35,0);
+    border-bottom: #fff;
+    border-style: dotted;
+    border-width: 0.25vh;
+}
+a:hover,a:active {
+    color: #fff;
 }
 body {
     text-align: center;
+    background-color: #121212;
 }
 </style>
 </head>
@@ -28,11 +30,11 @@ body {
 <div class="container">
 <form 
 >
-<h1 style="font-size: 6.5vh;">2023 Scouting: CHARGED UP℠</h1><br>
-<a href="pit">
+<h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+<a href="pit" class="gameflair1">
     Pit Form<br>
 </a><br>
-<a href="main">
+<a href="main" class="gameflair1">
     Main Form<br>
 </a><br>
 <br>
