--- a/src/submitted.html
+++ b/src/submitted.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/2023_float.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.css" type="text/css">
     <meta http-equiv="refresh" content="2;/" />
     <title>Form Submitted!</title>
+    <style>
+        body {
+            vertical-align: middle;
+        }
+    </style>
 </head>
     <body>
-        <h1>Submitted!</h1>
-        <h3 style="color: lightslategray; text-align: center;">Redirecting...</h3>
+        <h1 style="color: #FFB600">Submitted!</h1>
+        <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
     </body>
 </html>
