--- a/src/main.html
+++ b/src/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/2023_float.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.css" type="text/css">
     <title>Match Scouting</title>
 </head>
 
