fix minified files

--- a/src/pit.html
+++ b/src/pit.html
@@ -23,12 +23,12 @@
                 </fieldset>
                 <fieldset>
                     <label>Your Name<br></label>
-                    <input placeholder="Amon Gus" type="text" name="name" required>
+                    <input type="text" name="name" required>
                 </fieldset>
 
                 <fieldset>
                     <label>Number of the Team you are Scouting<br></label>
-                    <input placeholder="766" type="tel" name="team" required>
+                    <input type="tel" name="team" required>
                 </fieldset>
 
                 <h2 class="gameflair1">Pit Scouting</h2>
