--- a/src/submitted.html
+++ b/src/submitted.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <meta http-equiv="refresh" content="2;/" />
     <title>Form Submitted!</title>
