more stylesheet changes

--- a/src/main.html
+++ b/src/main.html
@@ -33,7 +33,7 @@
 
         <fieldset>
             <label>Match Number<br></label>
-            <input type="tel" name="match" required>
+            <input type="tel" name="match" required class="smallerInput">
             <select name="level">
                 <option value="practice">Practice</option>
                 <option value="qualification" selected>Qual</option>
@@ -86,7 +86,7 @@
         <h2 class="gameflair1">Post Game</h2>
         <fieldset>
             <label>Estimate the cycle time of the robot</label><br>
-            <input type="tel" name="game11" required> seconds
+            <input type="tel" name="game11" required class="smallerInput"> seconds
         </fieldset>
         <fieldset>
             <label>Thoughts about the teleop phase<br><br></label>
