--- a/src/pit.html
+++ b/src/pit.html
@@ -44,8 +44,8 @@
                 </fieldset>
                 <fieldset>
                     <label>Experience<br></label>
-                    <input type="text" name="driveTeam"> Days of drive team work<br>
-                    <input placeholder="0 or 1" type="text" name="attended"> Attended events
+                    <input type="text" name="driveTeam" class="smallerInput"> Days of drive team work<br>
+                    <input placeholder="0 or 1" type="text" name="attended" class="smallerInput"> Attended events
                 </fieldset>
 
                 <input value="0" type="number" name="game1" hidden>
