update some styles

--- a/src/main.html
+++ b/src/main.html
@@ -107,7 +107,7 @@
         <br>
         <p style="text-align:center">
             <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 0.5rem;; border-style: solid; border-color: #515151; border-width: 0.875rem;; margin-top: 1rem;"><br><br>
-            <a href="/" style="color: white; background-color: #E90202; border-radius: 0.5rem;; border-style: solid; border-color: #E90202; border-width: 0.875rem;;">Back</a><br><br>
+            <a href="/" style="color: white; background-color: #E90202; border-radius: 0.5rem;; border-style: solid; border-color: #E90202; border-width: 0.875rem; text-decoration: none;">back</a><br><br>
         </p>
     </form>
     <br><br>
