--- a/src/pit.html
+++ b/src/pit.html
@@ -17,8 +17,9 @@
                 <fieldset>
                     <label>Event Code</label><br>
                     <select name="event">
+                        <option value="CADA" selected disabled>SELECT</option>
                         <option value="CADA">CADA - Sacramento Regional</option>
-                        <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
                     </select>
                 </fieldset>
                 <fieldset>
@@ -77,7 +78,7 @@
 
                 <p style="text-align:center">
                     <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 0.5rem; border-style: solid; border-color: #515151; border-width: 0.875rem;"><br><br>
-                    <a href="/" style="color: white; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem;">Back</a><br><br>
+                    <a href="/" style="color: white; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; text-decoration: none;">back</a><br><br>
                 </p>
             </form>
             <br><br>
