--- a/src/main.html
+++ b/src/main.html
@@ -81,6 +81,11 @@
         <input value="0" type="number" name="game23" hidden>
         <input value="0" type="number" name="game24" hidden>
         <input value="0" type="number" name="game25" hidden>
+
+        <input value="0" type="number" name="discordID" hidden>
+        <input value="0" type="number" name="discordName" hidden>
+        <input value="0" type="number" name="discordTag" hidden>
+        <input value="0" type="number" name="discordAvatarId" hidden>
         
         <br>
         <h2 class="gameflair1">Post Game</h2>
