--- a/src/pit.html
+++ b/src/pit.html
@@ -70,6 +70,11 @@
                 <input value="0" type="number" name="game19" hidden>
                 <input value="0" type="number" name="game20" hidden>
 
+                <input value="0" type="number" name="discordID" hidden>
+                <input value="0" type="number" name="discordName" hidden>
+                <input value="0" type="number" name="discordTag" hidden>
+                <input value="0" type="number" name="discordAvatarId" hidden>
+
                 <fieldset>
                     <label>Overall assessment<br></label>
                     <textarea rows="4" cols="38" name="overall"></textarea>
