--- a/src/browse.html
+++ b/src/browse.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="search">
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
             <fieldset>
@@ -40,10 +40,24 @@
                     <option value="CASJ">CASJ - Silicon Valley Regional</option>
                 </select>
             </fieldset>
-            <input type="submit" value="Search" style="color: white; background-color: #515151; border-radius: 0.5rem;; border-style: solid; border-color: #515151; border-width: 0.875rem;; margin-top: 1rem;"><br><br>
+            <input type="submit" value="Search" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;"><br><br>
             </fieldset>
         </form>
         <br><br>
+    </div>
+    <div class="container" id="results">
+        <div class="dummy">
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <fieldset>
+            <fieldset>
+                <h3>Team Number: </h3>
+                <h5>Match Number:   |  Event: </h5>
+            </fieldset>
+            <!--buttons-->
+            <button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Next</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Previous</button><br><br>
+            </fieldset>
+        <br><br>
+    </div>
     </div>
 </body>
 </html>
