--- a/src/pit.html
+++ b/src/pit.html
@@ -79,8 +79,22 @@
                     <label>Overall assessment<br></label>
                     <textarea rows="4" cols="38" name="overall"></textarea>
                 </fieldset>
-                <br>
 
+                <fieldset>
+                    <label>Images</label>
+                    <label>Image 1</label>
+                    <input type="file" name="image1" accept="image/png, image/jpeg">
+                    <label>Image 2</label>
+                    <input type="file" name="image2" accept="image/png, image/jpeg">
+                    <label>Image 3</label>
+                    <input type="file" name="image3" accept="image/png, image/jpeg">
+                    <label>Image 4</label>
+                    <input type="file" name="image4" accept="image/png, image/jpeg">
+                    <label>Image 5</label>
+                    <input type="file" name="image5" accept="image/png, image/jpeg">
+                </fieldset>
+
+                <br>
                 <p style="text-align:center">
                     <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 0.5rem; border-style: solid; border-color: #515151; border-width: 0.875rem;"><br><br>
                     <a href="/" style="color: white; background-color: #E90202; border-radius: 0.5rem; border-style: solid; border-color: #E90202; border-width: 0.875rem; text-decoration: none;">back</a><br><br>
