--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -29,8 +29,9 @@
 <body>
     <div class="container" id="search" style="display: flex;"> <!--flex is shown-->
         <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4 style="color: red; display: none"></h4>
+            <h4>Image Database</h4><br>
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
@@ -48,11 +49,12 @@
     </div>
     <div class="container" id="results" style="display: flex"> <!--flex is shown-->
         <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+            <h4>Image Database</h4><br>
             <fieldset>
             <fieldset>
                 <h3>Team Number: </h3>
-                <h5>Match Number:   |  Event: </h5>
+                <h5>Event: </h5>
                 <h5 style="text-align: left"></h5>
             </fieldset>
             <!--buttons-->
