--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -44,6 +44,7 @@
             </fieldset>
             <input type="submit" value="Search" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;"><br><br>
             </fieldset>
+            <small style="text-align: center;">To match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
         </form>
         <br><br>
     </div>
@@ -61,7 +62,7 @@
             <button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br><br>
             <button style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>
             </fieldset>
-        <br><br>
+            <small style="text-align: center;">To match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
     </div>
     </div>
     <script>
