--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
             <a href="main" class="gameflair1">Match Scouting<br></a><br>
             <a href="browse" class="gameflair1">Browse Data<br></a><br>
+            <a href="matches" class="gameflair1">Match List<br></a><br>
             <a href="pit" class="gameflair1">Pit Scouting<br></a>
         </form>
         <br><br>
