--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
             <a href="browse" class="gameflair1">Browse Data<br></a><br>
             <a href="matches" class="gameflair1">Match List<br></a><br>
             <a href="pit" class="gameflair1">Pit Scouting<br></a>
+            <br><br><br>
+            <button type="button" style="color: #121212; background-color: #E90202; border-radius: 0.25rem;; border-style: solid; border-color: #E90202; border-width: 0.4375rem;; margin-top: 0.5rem;" onclick="updatePWACache()">Update PWA</button>
         </form>
-        <br><br><br>
-        <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.25rem;; border-style: solid; border-color: #E90202; border-width: 0.4375rem;; margin-top: 0.5rem;" onclick="updatePWACache()">Back</button>
     </div>
     <script>
         if ("serviceWorker" in navigator) {
