--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,11 @@
                                 return;
                             }
                             return caches.delete(key);
+                            console.log(key);
                         })
                     );
                 })
+                console.log("done, I think")
         }
     </script>
 </body>
