--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/icon.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="public/10.2__iPad_landscape.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="public/9.7__iPad_Pro__7.9__iPad_mini__9.7__iPad_Air__9.7__iPad_portrait.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="public/iPhone_11_Pro_Max__iPhone_XS_Max_landscape.png">
