add link to offline version

--- a/src/login.html
+++ b/src/login.html
@@ -31,5 +31,6 @@
         </button>
     </div>
     </div>
+    <br><small><a href="offline.html">Access Offline Version</a></small>
 </body>
 </html>
