--- a/src/settings.html
+++ b/src/settings.html
@@ -24,7 +24,7 @@
             <h2>Settings</h2><br>
             <button style="background-color: rgba(0,0,0,0); border: 2px solid #f00; color: #f00; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="updateSW()">
                 <p>Update SW</p>
-            </button>
+            </button><br><br>
             <button style="background-color: rgba(0,0,0,0); border: 2px solid #f00; color: #f00; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='clearCookies'">
                 <p>Reset Cookies</p>
             </button><br><br>
@@ -37,6 +37,7 @@
         async function updateSW() {
             sw = await navigator.serviceWorker.ready
             sw.update()
+            location.reload()
         }
     </script>
 </body>
