--- a/src/settings.html
+++ b/src/settings.html
@@ -35,9 +35,15 @@
     </div>
     <script>
         async function updateSW() {
-            sw = await navigator.serviceWorker.ready
-            sw.update()
-            location.reload()
+            if(window.navigator && navigator.serviceWorker) {
+            navigator.serviceWorker.getRegistrations()
+            .then(function(registrations) {
+                for(let registration of registrations) {
+                registration.unregister();
+                }
+            });
+            }
+            window.location.reload(true);
         }
     </script>
 </body>
