--- a/src/main.html
+++ b/src/main.html
@@ -157,6 +157,24 @@
                 }
             })
         }
+        const inputItems = document.getElementsByTagName('input');
+        for(var i = 0; i < inputItems.length; i++) {
+            inputItems[i].addEventListener('change', (event) => {resetExportButton()});
+            inputItems[i].addEventListener('keydown', (event) => {resetExportButton()});
+            inputItems[i].addEventListener('paste', (event) => {resetExportButton()});
+        }
+        document.addEventListener('keydown', (event) => {resetExportButton()});
+        document.addEventListener('paste', (event) => {resetExportButton()});
+        function resetExportButton() {
+            const downloadFormButton = document.getElementById('downloadFormButton')
+            const downloadFileLink = document.getElementById('downloadFileLink')
+            downloadFileLink.innerHTML = "";
+            downloadFileLink.href = "";
+            downloadFileLink.download = "";
+            downloadFileLink.style.display = "none";
+            downloadFormButton.innerHTML = "Download Submission";
+            downloadFormButton.style.display = "inline";
+        }
     </script>
 </body>
 </html>
